# provide-rust

./: .gitignore  Cargo.toml  LICENSE_MIT  Makefile  README.md
examples/rust-demo/: Cargo.toml  README.md
examples/rust-demo/src/: main.rs
examples/wasm-demo/: Cargo.toml  package.json
examples/wasm-demo/client/: package-lock.json  package.json
examples/wasm-demo/client/src/: App.js
examples/wasm-demo/src/: lib.rs
examples/wasm-demo/tests/: web.rs
ops/: docker-compose-local-baseline.yml  docker-compose.yml  run_integration_tests.sh  run_many.sh
src/: api.rs  baseline.rs  client.rs  ident.rs  lib.rs  models.rs  nchain.rs  privacy.rs  vault.rs
src/api/: baseline.rs  client.rs  ident.rs  nchain.rs  privacy.rs  vault.rs
src/models/: baseline.rs  client.rs  ident.rs  nchain.rs  privacy.rs  vault.rs
tests/: baseline.rs  client.rs  ident.rs  nchain.rs  privacy.rs  utils.rs  vault.rs
