[package]
name = "provide-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1.0.68"
http = "0.2.5"
serde = { version = "1.0.114", features = ["derive"] }
async-trait = "0.1.51"
fake = { version = "2.4", features = ['derive'] }
regex = "1.5.4"