[package]
name = "provide-rust"
version = "0.1.0"
authors = ["Alex Dunne <alex@provide.services>"]
edition = "2021"
description = "Provide rust client"
license = "MIT"
publish = false

[dependencies]
async-trait = "0.1.51"
fake = { version = "2.4", features = ["derive"] }
getrandom = { version = "0.2.3", features = ["js"] }
regex = "1.5.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.12.0", features = ["full"] }
sha256 = "1.1.1"
base64 = "0.13.1"
elasticsearch = "8.4.0-alpha.1"
